Update the sync interval displayed when Apply is clicked. Updated time unit strings.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3345 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/iFolderAdvanced.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.resx
@@ -4229,15 +4229,15 @@
 		<value>This iFolder will sync with the host every {0} {1}.</value>
 	</data>
 	<data name="seconds">
-		<value>seconds</value>
+		<value>second(s)</value>
 	</data>
 	<data name="minutes">
-		<value>minutes</value>
+		<value>minute(s)</value>
 	</data>
 	<data name="hours">
-		<value>hours</value>
+		<value>hour(s)</value>
 	</data>
 	<data name="days">
-		<value>days</value>
+		<value>day(s)</value>
 	</data>
 </root>
