1. Cleaned up layout of dialogs. 2. Fixed error messages (bug 71784). 3. Removed inappropriate usage of the word "fatal". 4. Fixed placement of details button on MyMessageBox.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3348 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -560,7 +560,7 @@
 		<value>A fatal error was encountered during iFolder initialization.</value>
 	</data>
 	<data name="fatalErrorTitle">
-		<value>Fatal Error</value>
+		<value>Unable to Start iFolder Services</value>
 	</data>
 	<data name="iFolderRunning">
 		<value>There is already an instance of iFolder running.</value>
