--- a/ifolder/src/iFolderShell/ConflictResolver.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.resx
@@ -1043,7 +1043,7 @@
     <value>AssociateIndex</value>
   </data>
   <data name="localName.HelpString">
-    <value>The name of the file on the local computer.</value>
+    <value>The name of the file on the local computer.  Double-click the name to open the file.</value>
   </data>
   <data name="localName.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value />
@@ -1763,7 +1763,7 @@
     <value>AssociateIndex</value>
   </data>
   <data name="serverName.HelpString">
-    <value>The name of the file on the iFolder server.</value>
+    <value>The name of the file on the iFolder server.  Double-click the name to open the file.</value>
   </data>
   <data name="serverName.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value />
@@ -2153,7 +2153,7 @@
     <value>75, 23</value>
   </data>
   <data name="close.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="close.Text">
     <value>Close</value>
@@ -2261,7 +2261,7 @@
     <value>416, 144</value>
   </data>
   <data name="versionsPanel.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>10</value>
+    <value>6</value>
   </data>
   <data name="versionsPanel.Text">
     <value />
@@ -2357,7 +2357,7 @@
     <value>208, 144</value>
   </data>
   <data name="serverPanel.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>1</value>
+    <value>8</value>
   </data>
   <data name="serverPanel.Text">
     <value />
@@ -2453,7 +2453,7 @@
     <value>208, 144</value>
   </data>
   <data name="localPanel.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>0</value>
+    <value>7</value>
   </data>
   <data name="localPanel.Text">
     <value />
@@ -2491,14 +2491,14 @@
   <data name="$this.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </data>
-  <data name="$this.Name">
-    <value>ConflictResolver</value>
-  </data>
   <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>(Default)</value>
   </data>
   <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
+  </data>
+  <data name="$this.Name">
+    <value>ConflictResolver</value>
   </data>
   <data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
