1. Fixed some typo's. 2. Fixed MyMessageBox so that it centers the window to the parent. 3. Code cleanup.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3424 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3320,7 +3320,7 @@
 		<value>Unable to Connect to iFolder Server</value>
 	</data>
 	<data name="serverConnectError">
-		<value>A error was encountered while connecting to the iFolder server.  Please verify the information entered and try again.  If the problem persists, please contact your network administrator.</value>
+		<value>An error was encountered while connecting to the iFolder server.  Please verify the information entered and try again.  If the problem persists, please contact your network administrator.</value>
 	</data>
 	<data name="saveSyncError">
 		<value>An error was encountered while saving the default sync interval.</value>
