--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3322,6 +3322,18 @@
 	<data name="serverConnectError">
 		<value>An error was encountered while connecting to the iFolder server.  Please verify the information entered and try again.  If the problem persists, please contact your network administrator.</value>
 	</data>
+	<data name="accountDisabled">
+		<value>The user account is disabled.  Please contact your network administrator for assistance. </value>
+	</data>
+	<data name="accountLockout">
+		<value>The user account has been locked out.  Please contact your network administrator for assistance.</value>
+	</data>
+	<data name="graceLogin">
+		<value>Your password has expired.  You have {0} grace logins remaining.</value>
+	</data>
+	<data name="graceLoginTitle">
+		<value>Expired Password</value>
+	</data>
 	<data name="saveSyncError">
 		<value>An error was encountered while saving the default sync interval.</value>
 	</data>
