--- a/gaim-ifolder/README
+++ b/gaim-ifolder/README
@@ -10,17 +10,22 @@ GNU GENERAL PUBLIC LICENSE (see the COPYING file).
 
 Copyright (C) 2004 Novell, Inc.
 
+Author(s):
+	Boyd Timothy <btimothy@novell.com>
+
 ---------------------------------
 Building the Gaim iFolder Plugin
 ---------------------------------
 
 First, you must build Gaim.  Follow the instructions available from
 http://gaim.sourceforge.net/ for your particular platform and come back to
-these instructions.
+these instructions.  For anybody using Novell Linux Desktop (NLD), I've
+included instructions to do this below in the "Building Gaim on NLD" section
+(These instructions for NLD should be about the same for other Linux
+distributions).
 
-Copy "ifolder.c" to the "gaim/plugins" directory (or create a symbolic link that
-points to "ifolder.c" in this directory.  From the "gaim/plugins" directory
-type the following to build the plugin:
+Copy "ifolder.c" to the "gaim/plugins" directory.  From the "gaim/plugins"
+directory type the following to build the plugin:
 
 Linux
 ------
@@ -36,23 +41,114 @@ Win32
 Installing the Gaim iFolder Plugin
 -----------------------------------
 
-Once you've got a library (.so/.dll), copy (or create a symbolic link) the
-library file to the following directory:
+Once you've got a library (.so/.dll), copy the library file to the following
+directory:
+
+Linux
+------
 
 	<your gaim prefix>/lib/gaim/
+	
+Win32
+------
+
+	C:\Program Files\Gaim\plugins\
 
 Now start Gaim and the iFolder Plugin will be available from the "Preferences"
 window under "Plugins".
+
+Installing the Invitation Graphics
+-----------------------------------
+
+I haven't figured out the best way to do this yet, so for now, copy the PNG
+files inside the gaim-ifolder/pixmaps/ directory (ifolder48.png &
+glyphmarks48.png) to you Gaim User directory:
+
+Linux
+------
+
+	~/.gaim/
+
+Win32
+------
+
+	? - I'm not sure what this would be.  If you know, please fill me in and I
+	    will update these instructions.
+
+
+--------------------------------------
+Using/Testing the Gaim iFolder Plugin
+--------------------------------------
+
+Once you've installed and enabled the plugin, you'll be able to simulate adding
+a member to an iFolder.  Normally, once we plug in the calls to iFolder/Simias,
+an invitation to share an iFolder will be sent to a buddy automatically when
+you add the buddy as a member of an iFolder.
+
+To simulate adding a buddy as an iFolder member, right-click on the buddy in
+the Gaim Buddy List and select "Simulate Add Member".  It will prompt you for
+a collection name and collection type (eventually you'll be able to share any
+Simias collection types, like Glyphmarks, etc.).  When you press OK, an
+invitation to share that collection will be sent to the buddy.  If the buddy
+also has the Gaim iFolder Plugin installed, they'll be able to Accept/Reject
+the invitation (and you'll see that when they do).
+
+To bring up a list of pending invitations (incoming or outgoing), you can
+right-click on a buddy in the buddy list and select "Simias Invitations" or
+you can press the "Show Invitations" button on the iFolder plugin preferences
+page.
+
+Note: It might be easy to annoy buddies who do not have this plugin installed
+by sending them invitations (since they'll see a message asking them to install
+the plugin.  Either don't do this, or help them get the plugin installed too so
+you can both join in on the fun.
+
+
+---------------------
+Building Gaim on NLD
+---------------------
+
+1. Download Gaim 1.1.2 to your home directory
+
+	http://prdownloads.sourceforge.net/gaim/gaim-1.1.2.tar.bz2?download
+
+2. Uncompress the source package
+
+	cd /home/<your-username>
+	tar -xjvf gaim-1.1.2.tar.bz2 (this will create the gaim-1.1.2/ directory
+                                  in your home directory)
+
+3. Build and Install Gaim
+
+	cd /home/<your-username>/gaim-1.1.2
+	./configure --prefix=/home/<your-username>/gaim-stage --enable-debug
+	make install
+
+4. Build and Install the Gaim iFolder Plugin
+
+	Copy gaim-ifolder/ifolder.c into /home/<your-username>/gaim-1.1.2/plugins
+	
+	cd /home/<your-username>/gaim-1.1.2/plugins
+	make ifolder.so
+	cp ifolder.so /home/<your-username>/gaim-stage/lib/gaim
+
+	Follow the instructions above to install ifolder48.png & glyphmarks48.png.
+
+5. Run Gaim with a test configuration directory so you won't interfere with
+   any Gaim preferences you've already established.
+   
+   cd /home/<your-username>/gaim-stage
+   ./gaim --config=/home/<your-username>/.gaim-stage
+
+6. Enable the Gaim iFolder Plugin in Gaim Preferences | Plugins and you're
+   ready to start!
 
 
 ---------------------
 Discussion & Support
 ---------------------
 
-    A mailing list for Simias and iFolder discussion is available.
+A mailing list for Simias and iFolder discussion is available.  You can
+subscribe to the mailing list by visiting:
 
-    You can subscribe to the mailing list by visiting:
-
-        http://forge.novell.com/mailman/listinfo/ifolder-dev
-
-
+	http://forge.novell.com/mailman/listinfo/ifolder-dev
