--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3310,9 +3310,6 @@
 	<data name="readAccountsError">
 		<value>An error was encountered while reading the iFolder accounts.</value>
 	</data>
-	<data name="checkUpdateError">
-		<value>An error was encountered while checking for an iFolder client upgrade.</value>
-	</data>
 	<data name="failedAuth">
 		<value>The user name or password is invalid.  Please try again.</value>
 	</data>
@@ -3321,6 +3318,18 @@
 	</data>
 	<data name="serverConnectError">
 		<value>An error was encountered while connecting to the iFolder server.  Please verify the information entered and try again.  If the problem persists, please contact your network administrator.</value>
+	</data>
+	<data name="accountDisabled">
+		<value>The user account is disabled.  Please contact your network administrator for assistance. </value>
+	</data>
+	<data name="accountLockout">
+		<value>The user account has been locked out.  Please contact your network administrator for assistance.</value>
+	</data>
+	<data name="graceLogin">
+		<value>Your password has expired.  You have {0} grace logins remaining.</value>
+	</data>
+	<data name="graceLoginTitle">
+		<value>Expired Password</value>
 	</data>
 	<data name="saveSyncError">
 		<value>An error was encountered while saving the default sync interval.</value>
