Report delta sync savings through the sync log (fix for bug 69252).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3582 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/SyncLog.resx
+++ b/ifolder/src/FormsTrayApp/SyncLog.resx
@@ -421,6 +421,12 @@
 	<data name="downloadFile">
 		<value>Downloading file: {0}</value>
 	</data>
+	<data name="uploadDeltaSyncFile">
+		<value>Uploading file: {0}. Synchronizing changes only: {1}% savings.</value>
+	</data>
+	<data name="downloadDeltaSyncFile">
+		<value>Downloading file: {0}. Synchronizing changes only: {1}% savings.</value>
+	</data>
 	<data name="uploadDir">
 		<value>Uploading directory: {0}</value>
 	</data>
