Throw a different exception message from SearchForDomainUsers web method if the roster hasn't finished the initial sync (fix for bug 70349).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3601 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/Picker.resx
+++ b/ifolder/src/iFolderShell/Picker.resx
@@ -1327,6 +1327,9 @@
 	<data name="memberReadError">
 		<value>An error was encountered while reading the member list.</value>
 	</data>
+	<data name="rosterNotSynced">
+		<value>The user list has not finished synchronizing from the server.  Please try again later.</value>
+	</data>
 	<data name="searchPrompt">
 		<value>&lt;Enter text to find a user&gt;</value>
 	</data>
