1. Enable notifications on initial sync of POBox. 2. Report number of objects to sync in iFolder status column (fix for bug 70291).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3631 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -1774,6 +1774,12 @@
 	<data name="statusSyncFailure">
 		<value>Out of sync</value>
 	</data>
+	<data name="statusSyncingItems">
+		<value>{0} objects to sync</value>
+	</data>
+	<data name="statusSyncItemsFailed">
+		<value>{0} objects out of sync</value>
+	</data>
 	<data name="readiFolderSettingsError">
 		<value>An error was encountered while reading the iFolder settings.</value>
 	</data>
